--- a/templates/header.html
+++ b/templates/header.html
@@ -10,6 +10,9 @@
             <nav class="desktop-nav flex items-center space-x-6" aria-label="Primary">
                 <a href="{{rootPath}}index.html" class="text-gray-400 hover:text-white transition-colors duration-200">Home</a>
                 <a href="{{rootPath}}Posts/posts.html" class="text-gray-400 hover:text-white transition-colors duration-200">Blog</a>
+                <a href="{{rootPath}}Posts/portfolio-heatmap.html" class="text-gray-400 hover:text-white transition-colors duration-200">Heatmap</a>
+                <a href="{{rootPath}}docs.html" class="text-gray-400 hover:text-white transition-colors duration-200">Docs</a>
+                <a href="{{rootPath}}tools.html" class="text-gray-400 hover:text-white transition-colors duration-200">Tools</a>
                 <a href="{{rootPath}}about.html" class="text-gray-400 hover:text-white transition-colors duration-200">About</a>
             </nav>
 
@@ -34,6 +37,9 @@
             <div class="mobile-menu-links">
                 <a href="{{rootPath}}index.html" class="mobile-menu-link">Home</a>
                 <a href="{{rootPath}}Posts/posts.html" class="mobile-menu-link">Blog</a>
+                <a href="{{rootPath}}Posts/portfolio-heatmap.html" class="mobile-menu-link">Heatmap</a>
+                <a href="{{rootPath}}docs.html" class="mobile-menu-link">Docs</a>
+                <a href="{{rootPath}}tools.html" class="mobile-menu-link">Tools</a>
                 <a href="{{rootPath}}about.html" class="mobile-menu-link">About</a>
             </div>
         </nav>
